--- a/ShortURL/ReadME
+++ b/ShortURL/ReadME
@@ -3,4 +3,9 @@
 -Установить Apache
 -Установить PHP актуальной версии
 -Файл httpd.conf(Конфигуарационный файл для Apache) перенести с заменой в {Корневая папка Apache}/conf/
--Файлы "main.html", "post.php" и папку "l" перенести в {Корневая папка Apache}/htdocs/  
+-Файлы "main.html", "post.php" и папку "l" перенести в {Корневая папка Apache}/htdocs/ShortURL  
+После запуска Apache(httpd.exe) В адресной строке браузера введите localhost
+При нажатии кнопки "Submit" или клавиши "Enter" копируется URL введенный в текстовое поле, создаётся на него сокращённая ссылка //сокращённую ссылку тоже можно сокращать
+Полученная сокращённая ссылка сохраняется в "l/links.ini" вместе с оригинальной
+Если введённый URL уже есть в файле links.ini, то сокращённая ссылка заново не создаётся
+После получения сокращённой ссылки, при нажатии на кнопку "Copy", ссылка сохраняется в буфере обмена 
